--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <!-- Quotes -->
         <div id="quotes" class="parallax-container scrollspy">
             <div class="parallax"><img src="assets/gmbar9.png"></div>
-            <div class="client">
+            <div class="quotes">
                 <h1 class="center light black-text text-darken-3">Ada aksi, Ada reaksi.</h1>
                 <h1 class="center">-Isaac Newton.</h1>
             </div>
