--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </section>
         <!-- Project -->
-        <section id="project" class="services grey lighten-3 scrollspy">
+        <section id="project" class="project grey lighten-3 scrollspy">
             <div class="container">
                 <div class="row">
                     <h3 class="center light red-text text-darken-3">Project</h3>
@@ -131,7 +131,7 @@
             </div>
         </div>
         <!-- Skills -->
-        <section id="skills" class="about scrollspy">
+        <section id="skills" class="skills scrollspy">
             <div class="container">
                 <div class="row">
                     <h3 class="center light red-text text-darken-3">Skills</h3>
